Applied fix for legend overlay that was covering the map

--- a/prototypes/desktop/www/css/directives.css
+++ b/prototypes/desktop/www/css/directives.css
@@ -27,3 +27,8 @@ ui-view[name="panel"] section {
 
 /*    padding: 0;*/
 }
+
+.position-fix {
+    position: absolute;
+    width: 100%;
+}
